# mongodb-aggregations

./: .gitignore  Cargo.toml
mongodb_aggregations/: Cargo.toml
mongodb_aggregations/src/: lib.rs
mongodb_aggregations/src/stages/: add_fields.rs  bucket.rs  change_stream.rs  change_stream_large_event.rs  coll_stats.rs  count.rs  densify.rs  documents.rs  facet.rs  lookup.rs  match_.rs  mod.rs  redact.rs  replace.rs  sample.rs  search.rs  set_window_fields.rs  skip.rs  sort.rs  union_with.rs  unset.rs  unwind.rs
mongodb_aggregations_derive/: Cargo.toml
mongodb_aggregations_derive/src/: helpers.rs  lib.rs  options.rs
src/: lib.rs  pipeline.rs
src/stages/: add_fields.rs  bucket.rs  change_stream.rs  count.rs  group.rs  limit.rs  list.rs  lookup.rs  match.rs  merge.rs  mod.rs  out.rs  plan_cache_stats.rs  project.rs  redact.rs  replace_root.rs  set.rs  set_window_fields.rs  unset.rs  unwind.rs
