[package]
name = "mongodb-aggregations"
version = "0.1.0"
edition = "2021"
description = "A library for building MongoDB aggregations pipelines in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.7.0"
derive_builder = "0.12.0"
